force-app/main/default/objects/ContentVersion/fields/Agreement_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Document_Type__c</fullName>
    <label>Agreement Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Photocopy</fullName>
            </value>
            <value>
                <fullName>True copy or SRO Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>