force-app/main/default/objects/ContentVersion/fields/Checker_ID__c.field-meta.xml
<CustomField>
    <fullName>Checker_ID__c</fullName>
    <label>Checker ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>