force-app/main/default/objects/ContentVersion/fields/Current_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Record_Id__c</fullName>
    <label>Current Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>