force-app/main/default/objects/ContentVersion/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Information</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>