force-app/main/default/objects/ContentVersion/fields/Deferal_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferal_Date__c</fullName>
    <label>Deferal Date</label>
    <type>Date</type>
</CustomField>