force-app/main/default/objects/ContentVersion/fields/Deferal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deferal_Stage__c</fullName>
    <label>Deferal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Stage_Global_Picklist</valueSetName>
    </valueSet>
</CustomField>