force-app/main/default/objects/ContentVersion/fields/Document_Condition__c.field-meta.xml
<CustomField>
    <fullName>Document_Condition__c</fullName>
    <label>Document Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In good order</fullName>
            </value>
            <value>
                <fullName>Mutilated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>