force-app/main/default/objects/ContentVersion/fields/Document_Family__c.field-meta.xml
<CustomField>
    <fullName>Document_Family__c</fullName>
    <label>Document Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>