force-app/main/default/objects/ContentVersion/fields/Document_Set_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Set_Code_Id__c</fullName>
    <label>Document Set Code Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>