force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIV-B Report</fullName>
            </value>
            <value>
                <fullName>FIV-C Report</fullName>
            </value>
            <value>
                <fullName>Bureao Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>