force-app/main/default/objects/ContentVersion/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIV - C Report</fullName>
            </value>
            <value>
                <fullName>FIV - B Report</fullName>
            </value>
            <value>
                <fullName>Online EC Report</fullName>
            </value>
            <value>
                <fullName>Legal Opinion Report</fullName>
            </value>
            <value>
                <fullName>DOS Report</fullName>
            </value>
            <value>
                <fullName>Bureau Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>