force-app/main/default/objects/ContentVersion/fields/Is_Deferal_Document__c.field-meta.xml
<CustomField>
    <fullName>Is_Deferal_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deferal Document</label>
    <type>Checkbox</type>
</CustomField>