force-app/main/default/objects/ContentVersion/fields/Is_Document_Master_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Master_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Master Record</label>
    <type>Checkbox</type>
</CustomField>