force-app/main/default/objects/ContentVersion/fields/isBureauReport__c.field-meta.xml
<CustomField>
    <fullName>isBureauReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bureau Report</label>
    <type>Checkbox</type>
</CustomField>