force-app/main/default/objects/ContentVersion/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Login</label>
    <referenceTo>Pre_Login__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>