force-app/main/default/objects/ContentVersion/fields/Maker_ID__c.field-meta.xml
<CustomField>
    <fullName>Maker_ID__c</fullName>
    <label>Maker ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>