force-app/main/default/objects/ContentVersion/fields/Number_of_Pages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pages__c</fullName>
    <label>Number of Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>