force-app/main/default/objects/ContentVersion/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <label>Original</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>