force-app/main/default/objects/ContentVersion/fields/Parent_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Property_Id__c</fullName>
    <label>Parent Property Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>