force-app/main/default/objects/ContentVersion/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>