force-app/main/default/objects/ContentVersion/fields/Required_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Required_Document_Name__c</fullName>
    <label>Required Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>