force-app/main/default/objects/ContentVersion/fields/Uploaded_From__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_From__c</fullName>
    <label>Uploaded From</label>
    <length>30</length>
    <type>Text</type>
</CustomField>