force-app/main/default/objects/ContentVersion/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <label>Waiver Reason</label>
    <type>TextArea</type>
</CustomField>